cmake_minimum_required(VERSION 3.21)
project(p101_c_examples
        VERSION 0.0.1
        DESCRIPTION ""
        LANGUAGES C)

add_subdirectory(complex)
add_subdirectory(ctype)
add_subdirectory(fenv)
add_subdirectory(inttypes)
add_subdirectory(locale)
add_subdirectory(math)
add_subdirectory(setjmp)
add_subdirectory(signal)
add_subdirectory(stdlib)
add_subdirectory(string)
add_subdirectory(time)
add_subdirectory(wchar)
add_subdirectory(wctype)
